# OpenGameSocial

./: .gitmodules
Backend/: .gitignore  OpenGameSocial.sln
Backend/Adapters/OpenGameSocial.VendorAdapter/: OpenGameSocial.VendorAdapter.csproj
Backend/Adapters/OpenGameSocial.WebApi/: OpenGameSocial.WebApi.csproj  VendorStartup.cs
Backend/OpenGameSocial/: DependencyInjectionExtensions.cs  DiExtensions.cs  OpenGameSocial.csproj
Backend/OpenGameSocial.Abstractions/: IDatabase.cs  IPlugin.cs  OpenGameSocial.Abstractions.csproj
Backend/OpenGameSocial.Abstractions/API/: ApiEndpointAttribute.cs  FromBodyParamAttribute.cs  FromQueryParamAttribute.cs  IAuthenticationValidator.cs
Backend/OpenGameSocial.Abstractions/DependencyInjection/: RegisterConfigurationAttribute.cs  RegisterServiceAttribute.cs
Backend/OpenGameSocial.AccountService/: OpenGameSocial.AccountService.csproj  Program.cs  TestEndpoint.cs  TestModel.cs  plugins.list
Backend/OpenGameSocial.CodeGen/: OpenGameSocial.CodeGen.csproj  WebApiGenerator.cs  WebApiPlugin.cs
Backend/OpenGameSocial.Core/: OpenGameSocial.Core.csproj
Backend/OpenGameSocial.Core/Config/: IdentityProvidersConfig.cs  MongoConfig.cs  OpenIdIdentityProviderConfig.cs  RedisConfig.cs
Backend/OpenGameSocial.Core/Database/: DiExtensions.cs  IMongoCollectionProvider.cs  MongoCollectionProvider.cs
Backend/OpenGameSocial.Core/DependencyInjection/: ServiceRegistrationExtensions.cs
Backend/OpenGameSocial.Core/Dispatching/: DiExtensions.cs  Dispatcher.cs  ICommand.cs  IDispatcher.cs  IEvent.cs  IQuery.cs
Backend/OpenGameSocial.GameApi/: CustomTokenAuthenticationHandler.cs  OpenGameSocial.GameApi.csproj  OpenGameSocial.GameApi.http  Program.cs  WeatherForecast.cs  appsettings.Development.json
Backend/OpenGameSocial.GameApi/Controllers/: TestAuthController.cs  WeatherForecastController.cs
Backend/OpenGameSocial.GameApi/Signal/: TestHub.cs
Backend/OpenGameSocial.TestApp/: MyTestCommand.cs  MyTestEvent.cs  MyTestQuery.cs  OpenGameSocial.TestApp.csproj  Program.cs
Backend/OpenGameSocial/Plugins/: PluginManager.cs
Backend/Plugins/OpenGameSocial.MongoDB/: MongoConfig.cs  MongoDatabase.cs  MongoPlugin.cs  OpenGameSocial.MongoDB.csproj
Builder/: Builder.sln
Builder/Builder/: Builder.csproj  ConfigurationsConstants.cs  PathConstants.cs  ProcessRunner.cs  Program.cs
Builder/Builder.API/: Builder.API.csproj  ICompiler.cs  ILinker.cs  IModule.cs  IPlatform.cs  IProject.cs  ITarget.cs
Builder/Builder.API/Module/: ModuleBase.cs
Builder/Builder/BuildProject/: BuildProject.cs  CsharpProjectModel.cs  ProjectLoadContext.cs
Builder/Builder/Extensions/: StringExtensions.cs
CodegenTool/: .gitignore  CodegenTool.sln
CodegenTool/CodegenTool/: IMacroHandler.cs  MacroHandlingManager.cs  MacroNames.cs  OutputFiles.cs  OutputFilesManager.cs  ParsingContext.cs  Program.cs
SDK/: .clang-format  .gitignore  CMakeLists.txt  GenMakefile.command  GenVs2022.bat  GenXcode.command  InitMac.command  config.lua  premake5.lua
SDK/Extensions/: CMakeLists.txt  Config.cmake  README.MD
SDK/Extensions/BsdSocket/Source/Core/Network/: NetAddress.cpp  NetAddress.h  Socket.cpp  Socket.h
SDK/Extensions/LWS/: Config.cmake
SDK/Extensions/LWS/Source/WebSocket/: LWSManager.cpp  LWSManager.h  LWSWebSocket.cpp  LWSWebSocket.h  WebSocket.h
SDK/Extensions/WebSocket/: Config.cmake
SDK/Extensions/WebSocket/Source/: WebSocket.cpp  WebSocket.h  WebSocketEnums.h
SDK/Extensions/WebSocket/Source/WebSocket/: WebSocket.cpp  WebSocket.h  WebSocketManager.cpp  WebSocketManager.h
SDK/Extensions/WinSocket/Source/Core/Network/: NetAddress.cpp  NetAddress.h  Socket.cpp  Socket.h
SDK/Include/: Core.h  OpenGameSocial.h
SDK/Include/OGS/: Core.h  Result.h
SDK/Include/OGS/Interfaces/: Account.h  AccountTypes.h  Platform.h
SDK/Platform/: platforms.lua
SDK/Platform/Darwin/: CMakeLists.txt  Config.cmake
SDK/Platform/Darwin/Source/: Platform.h
SDK/Platform/Darwin/Source/Http/: MacHttpRequest.cpp  MacHttpRequest.h  MacHttpRequest.mm
SDK/Platform/Linux/: CMakeLists.txt  Config.cmake
SDK/Platform/Linux/Source/: Platform.h
SDK/Platform/Linux/Source/Http/: LinuxHttpRequest.cpp  LinuxHttpRequest.h
SDK/Platform/MacOSX/Http/: MacHttpRequest.h  MacHttpRequest.mm
SDK/Platform/Win64/Http/: WinHttpManager.cpp  WinHttpManager.h  WinHttpRequest.cpp  WinHttpRequest.h
SDK/Platform/Windows/: CMakeLists.txt  Config.cmake
SDK/Platform/Windows/Source/: Platform.h
SDK/Platform/Windows/Source/Http/: WinHttpRequest.cpp  WinHttpRequest.h
SDK/Platform/Windows/Source/Internal/: StringUtils.cpp  StringUtils.h
SDK/Resources/: cacert_clean.pem
SDK/Source/: CMakeLists.txt  OpenGameSocial.cpp  TestAuthModels.h  WeatherModels.h  main.cpp
SDK/Source/Backend/: Config.h  Http.h
SDK/Source/Core/Common/: Codegen.h  Date.h  Delegate.h  Dispatcher.h  Guid.cpp  Guid.h  JsonParsers.cpp  MulticastDelegate.h  OperationResult.h  StringUtils.h  Ticker.cpp  Ticker.h  TypeUtils.h
SDK/Source/Core/Common/Containers/: NonBlockingQueue.h
SDK/Source/Core/Common/Dispatcher/: DispatcherOperations.h  DispatcherTraits.h  OperationHandle.h  OperationResult.h
SDK/Source/Core/Http/: Http.h  HttpEnums.h  HttpManager.cpp  HttpManager.h  HttpRequest.cpp  HttpRequest.h  HttpResponse.h  Uri.cpp  Uri.h
SDK/Source/Core/Logging/: Logger.cpp  Logger.h
SDK/Source/Core/Network/: NetAddressInterface.h  SocketInterface.h
SDK/Source/Core/Threading/: ThreadPool.h
SDK/Source/Core/Treading/: ThreadPool.cpp  ThreadPool.h
SDK/Source/Interfaces/: Account.cpp  Platform.cpp
SDK/Source/Services/: ServiceContainer.cpp  ServiceContainer.h  ServiceTraits.h
SDK/Source/Services/Account/: AccountRequests.h  AccountService.cpp  AccountService.h
SDK/Source/Services/Accounts/: AccountService.cpp  AccountService.h  TestSerialization.h  TestService.cpp  TestService.h
SDK/Source/Services/Signal/: Requests.h  SignalService.cpp  SignalService.h
SDK/Test2/: TestModule.cs
SDK/Test2/Private/: test.cpp
SDK/Testing/: CMakeLists.txt  IntegrationTestingToolModule.cs  cacert.h  main.cpp
SDK/Testing/Private/: main.cpp
(+26 files in other folders)
